--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
           </nav>
         </div>
       </header> 
-      <div class="grow bg-yellow-200 flex justify-center items-center">
-        
-        <p id="main_text" class="font-black text-[20vmin]">Enter</p>
+      <div class="grow bg-yellow-200">
+
+        <h2 class="font-black text-[10vw] text-center">About</h2>
 
       </div>
 </body>
