--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,12 @@
           </nav>
         </div>
       </header> 
-      <div class="grow bg-yellow-200 flex justify-center items-center">
-        
-        <p id="main_text" class="font-black text-[20vmin]">Enter</p>
+      <div class="grow bg-yellow-200">
+
+        Email-> ijvntk o
+        Ig-> jhv kvndf
+        Fb-> uv jbeh fmx
+        Github->rihefbwe jh
 
       </div>
 </body>
