--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header> 
       <div class="grow bg-yellow-200 flex justify-center items-center">
         
-        <p id="main_text" class="font-black text-[20vmin]">Enter</p>
+        <p id="main_text" class="font-black text-[rgba(0,0,0,0.3)] text-[20vmin]">Enter</p>
 
       </div>
 </body>
