--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       </header> 
       <div class="grow bg-yellow-200 flex justify-center items-center">
         
-        <p id="main_text" class="font-black text-[rgba(0,0,0,0.3)] text-[20vmin]">Enter</p>
-
+        <p id="main_text" class="font-black text-[rgba(0,0,0,0.3)] text-[20vmin] font-mono">Enter</p>
       </div>
 
       <script>
@@ -38,18 +37,34 @@
         if(window.location.search.includes("lost=True")){
           console.log(document.body.children[1])
           document.body.children[1].innerHTML = `
-          <p>You Lost!, try again</p>
+          <div class="text-center">
+          <p>You Lost!, Score-> ${window.sessionStorage.getItem("score")}</p>
+          <p>Max Score-> ${window.localStorage.getItem("max_score")}</p>
+          <br/>
+          <button class="p-4 rounded bg-green-400 hover:bg-green-600" onclick="location.replace('/')" autofocus>Try Again</button>
+          </div>
           `
         }
-
+        
 
 
         let elt = document.querySelector("#main_text")
+        let keys = [];
+        let score = 0;
+        let timer = setTimeout(()=>{window.location.replace("/lost=True")}, 1000)
+        for(let i = 33; i <=126; i++){
+          keys[keys.length] = String.fromCharCode(i)
+        }
         document.addEventListener("keypress", (ev)=>{
           console.log(ev.key);
           if(ev.key == elt.innerText){
-            elt.innerText = ev.key
+            elt.innerText = keys[Math.floor(Math.random() * (keys.length+1))]
+            score += 1
+            clearTimeout(timer)
+            timer = setTimeout(()=>{window.location.replace("/lost=True")}, 1000)
           }else{
+            window.localStorage.setItem("max_score", Math.max(window.localStorage.getItem("Max Score"), score))
+            window.sessionStorage.setItem("score", score);
             window.location.replace("/?lost=True")
           }
         })
