--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
             <span class="ml-3 text-xl">Click Reaction Test</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-gray-900" href="/">Home</a>
-            <a class="mr-5 hover:text-gray-900" href="/about.html">About</a>
-            <a class="mr-5 hover:text-gray-900" href="/contact.html">Contact</a>
+            <a class="mr-5 hover:text-gray-900" href="KeyboardReactionTest/">Home</a>
+            <a class="mr-5 hover:text-gray-900" href="KeyboardReactionTest/about.html">About</a>
+            <a class="mr-5 hover:text-gray-900" href="KeyboardReactionTest/contact.html">Contact</a>
             <a class="mr-5 hover:text-gray-900" href="https://github.com/diy-it-all">Github</a>
           </nav>
         </div>
