--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         let elt = document.querySelector("#main_text")
         let keys = [];
         let score = 0;
-        let timer = setTimeout(()=>{window.location.replace("KeyboardReactionTest/lost=True")}, 1000)
+        let timer = setTimeout(()=>{window.location.replace("/KeyboardReactionTest?lost=True")}, 1000)
         for(let i = 33; i <=126; i++){
           keys[keys.length] = String.fromCharCode(i)
         }
@@ -61,11 +61,11 @@
             elt.innerText = keys[Math.floor(Math.random() * (keys.length+1))]
             score += 1
             clearTimeout(timer)
-            timer = setTimeout(()=>{window.location.replace("KeyboardReactionTest/lost=True")}, 1000)
+            timer = setTimeout(()=>{window.location.replace("/KeyboardReactionTest?lost=True")}, 1000)
           }else{
             window.localStorage.setItem("max_score", Math.max(window.localStorage.getItem("Max Score"), score))
             window.sessionStorage.setItem("score", score);
-            window.location.replace("KeyboardReactionTest/?lost=True")
+            window.location.replace("/KeyboardReactionTest?lost=True")
           }
         })
       </script>
